php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #20217 .htaccess config settings ignored
Submitted: 2002-11-01 23:49 UTC Modified: 2002-11-02 17:08 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: php at nordby dot org Assigned:
Status: Closed Package: Apache2 related
PHP Version: 4.3.0-pre2 OS: RH Linux 7.3
Private report: No CVE-ID: None
 [2002-11-01 23:49 UTC] php at nordby dot org
Hi there,

This is something I believe I've encountered before (having briefly installed an earlier 4.3.0 snapshot) and now just stumbled over again after upgrading from 4.2.3 to 4.3.0pre2 under Apache2 on Linux.  (It may have been the reason I dropped back to 4.2.3 then, IIRC.)

Basically, I'm noticing that a significant number of PHP configuration settings in my .htaccess file(s) are being ignored entirely -- settings that worked fine under 4.2.3 (and earlier) and which have remained unmodified.

This problem may very well be related to bug #17234.

Given this .htaccess snippet:

php_flag register_globals off
php_flag log_errors on
php_flag display_errors on
php_flag display_startup_errors on
php_flag session.use_trans_sid off
php_value include_path ".:/var/www/site/_include"
php_value auto_prepend_file "global.php"
php_value error_log "/var/www/site/_log/php_error_log.txt"

I've determined that only log_errors, display_errors, display_startup_errors, include_path, and error_log are accepted -- the rest are ignored as if they were not specified at all (but can be set in php.ini).  A brief test also showed that asp_tags and short_open_tag (as in bug #17234) were ignored in htaccess too.

I don't think I'm doing anything wrong, but any suggestions as to a workaround are greatly appreciated -- I depend on these htaccess overrides (particularly auto_prepend_file) and can't move to 4.3.x until they're working flawlessly (in a backward-compatible way with 4.0.x+)...

Thanks!

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-11-02 17:08 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 02 15:00:02 2026 UTC