Fixed bug #20217. When php_flag & php_value are used, the PHP_INI_PERDIR flag should be used when setting the ini value. Otherwise, the user cannot modify per-directory ini settings specified via .htaccess.